Add favicon link to head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,5 @@
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
+  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/css/favicon.png"> 
 </head>
