Integrate Simple Analytics for tracking
Added Simple Analytics script for privacy-first tracking.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,8 @@
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
   <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/css/favicon.png"> 
+  <!-- Simple Analytics -- Privacy -->
+  <!-- 100% privacy-first analytics -->
+<script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+
 </head>
