Add Google site verification meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,5 +36,6 @@
   <!-- Simple Analytics -- Privacy -->
   <!-- 100% privacy-first analytics -->
 <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <meta name="google-site-verification" content="lIarGNJHOW5A-Z3fGtXoE86KWRfQmuIE0wRFzVHai0Q" />
 
 </head>
